# EndlessRunner

./: CMakeLists.txt
src/: all_horizontal_movable.cpp  config.h  main.cpp  new_operator.cpp
src/cpp/: Background.cpp  Character.cpp  Cloud.cpp  DeadScreen.cpp  Game.cpp  GameScreen.cpp  Interface.cpp  Obstacle.cpp  Obstacles.cpp  Platform.cpp  StateMachine.cpp  Table.cpp  TableScreen.cpp  WelcomeScreen.cpp  main.cpp
src/headers/: Background.h  Character.h  Cloud.h  Config.h  DeadScreen.h  Game.h  GameScreen.h  Includes.h  Interface.h  New_operator.h  Obstacle.h  Obstacles.h  Platform.h  State.h  StateMachine.h  Table.h  TableScreen.h  WelcomeScreen.h  all_horizontal_movable.h  config.h  includes.h
